agregada vista producto
tambien se modificaron los href del nav para que apunten a donde corresponde

--- a/index/index.html
+++ b/index/index.html
@@ -15,7 +15,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="../img/index/logo.png" alt="" style="width:60px"></a>
+        <a class="navbar-brand" href="./index.html"><img src="../img/index/logo.png" alt="" style="width:60px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -24,10 +24,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-disabled="true" href="index.html">Home</a>
+              <a class="nav-link" aria-disabled="true" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Categorías</a>
+              <a class="nav-link" aria-current="page" href="#section2">Categorías</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../productos/productos.html">Productos</a>
@@ -158,32 +158,32 @@
     <section class="section2">
       <article class="articleUltimosProductos">
         <div>
-          <p>ULTIMOS PRODUCTOS</p>
-          <a href="">Ver más</a>
+          <p>NUESTRAS OFERTAS</p>
+          <a href="../productos/productos.html">Ver más</a>
         </div>
-        <a class="aDescripcion" href=""><img
+        <a class="aDescripcion" href="../vistaProducto/vistaProducto.html"><img
             src="https://static.nb.com.ar/i/nb_MONITOR-PHILIPS-LED-24-241V8L_size_h100_81bb9f4ce1bab0ccb64638ce1974a330.jpg"
             alt="MONITOR PHILIPS LED 24 241V8L"></div>
           <p>MONITOR PHILIPS LED 24 241V8L</p>
         </a>
-        <a class="aDescripcion" href=""><img
+        <a class="aDescripcion" href="../vistaProducto/vistaProducto.html"><img
             src="https://static.nb.com.ar/i/nb_WATER-COOLER-GIGABYTE-AORUS-WATERFORCE-X280_size_h100_8d0036109f6be4f09f984625c0ce7373.jpeg"
             alt="WATER COOLER GIGABYTE AORUS WATERFORCE X280"></div>
           <p>WATER COOLER GIGABYTE AORUS WATERFORCE X280</p>
         </a>
-        <a class="aDescripcion" href=""><img
+        <a class="aDescripcion" href="../vistaProducto/vistaProducto.html"><img
             src="https://static.nb.com.ar/i/nb_WATER-COOLER-GIGABYTE-AORUS-WATERFORCE-X360_size_h100_5f956dd31ac501b20c50eb65b60d9ce8.png"
             alt="WATER COOLER GIGABYTE AORUS WATERFORCE X360"></div>
           <p>WATER COOLER GIGABYTE AORUS WATERFORCE X360</p>
         </a>
-        <a class="aDescripcion" href=""><img
+        <a class="aDescripcion" href="../vistaProducto/vistaProducto.html"><img
             src="https://static.nb.com.ar/i/nb_MOTHER-GIGABYTE-(LGA1700)-B760M-DS3H-DDR4_size_h100_a48695da55997cb85135f221f35809da.jpg"
             alt="MOTHER GIGABYTE (LGA1700) B760M DS3H DDR4"></div>
           <p>MOTHER GIGABYTE (LGA1700) B760M DS3H DDR4</p>
         </a>
       </article>
     </section>
-    <section class="section2">
+    <section id="section2" class="section2">
       <article class="articleArticulosGrid">
         <div class="imagen1">
           <p>NUESTROS PRODUCTOS</p>
