Mergeado todo a Home
se agregaron las vistas de productos corregidas, tambien se creo la vista "contacto" que tiene un formulario

--- a/index/index.html
+++ b/index/index.html
@@ -32,23 +32,14 @@
             <li class="nav-item">
               <a class="nav-link" href="../productos/productos.html">Productos</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Cómo comprar</a>
-            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
                 Información
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider" />
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
+                <li><a class="dropdown-item" href="../informacion/contacto/contacto.html">Contacto</a></li>
+                <li><a class="dropdown-item" href="../informacion/quienesSomos/quienesSomos.html">Quienes Somos</a></li>
               </ul>
             </li>
           </ul>
@@ -188,47 +179,47 @@
         <div class="imagen1">
           <p>NUESTROS PRODUCTOS</p>
         </div>
-        <a class="imagen2" href="">
+        <a class="imagen2" href="../productos/productos.html">
           <div class="divAuto">
             <p class="pImg">MOTHERBOARDS</p>
           </div>
         </a>
-        <a class="imagen3" href="">
+        <a class="imagen3" href="../productos/productos.html">
           <div class="divAuto">
             <p class="pImg">MEMORIAS RAM</p>
           </div>
         </a>
-        <a class="imagen4" href="">
+        <a class="imagen4" href="../productos/productos.html">
           <div class="divAuto">
             <p class="pImg">GABINETES</p>
           </div>
         </a>
-        <a class="imagen5" href="">
+        <a class="imagen5" href="../productos/productos.html">
           <div class="divAuto">
             <p class="pImg">PLACAS DE VIDEO</p>
           </div>>
         </a>
-        <a class="imagen6" href="">
+        <a class="imagen6" href="../productos/productos.html">
           <div class="divAuto">
             <p class="pImg">PERIFERICOS</p>
           </div>
         </a>
-        <a class="imagen7" href="">
+        <a class="imagen7" href="../productos/productos.html">
           <div class="divAuto">
             <p class="pImg">MONITORES</p>
           </div>
         </a>
-        <a class="imagen8" href="">
+        <a class="imagen8" href="../productos/productos.html">
           <div class="divAuto">
             <p class="pImg">FUENTES</p>
           </div>
         </a>
-        <a class="imagen9" href="">
+        <a class="imagen9" href="../productos/productos.html">
           <div class="divAuto">
             <p class="pImg">DISCOS</p>
           </div>
         </a>
-        <a class="imagen10" href="">
+        <a class="imagen10" href="../productos/productos.html">
           <div class="divAuto">
             <p class="pImg">MICROPROCESADORES</p>
           </div>
