--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <title>OasisByte</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <link rel="stylesheet" href="index.css" />
-  <link rel="icon" type="image/x-icon" href="../img/index/logo.png">
+  <link rel="stylesheet" href="./index/index.css" />
+  <link rel="icon" type="image/x-icon" href="./img/index/logo.png">
 </head>
 
 <body class="body">
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html"><img src="../img/index/logo.png" alt="" style="width:60px"></a>
+        <a class="navbar-brand" href="./index.html"><img src="./img/index/logo.png" alt="" style="width:60px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,7 @@
               <a class="nav-link" aria-current="page" href="#section2">Categorías</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../productos/productos.html">Productos</a>
+              <a class="nav-link" href="./productos/productos.html">Productos</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -38,8 +38,8 @@
                 Información
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="../informacion/contacto/contacto.html">Contacto</a></li>
-                <li><a class="dropdown-item" href="../informacion/quienesSomos/quienesSomos.html">Quienes Somos</a></li>
+                <li><a class="dropdown-item" href="./informacion/contacto/contacto.html">Contacto</a></li>
+                <li><a class="dropdown-item" href="./informacion/quienesSomos/quienesSomos.html">Quienes Somos</a></li>
               </ul>
             </li>
           </ul>
@@ -66,19 +66,19 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="../img/index/359c3fe03d3b559de94ed8b281c629d2.jpg" alt="First slide">
+              <img class="d-block w-100" src="./img/index/359c3fe03d3b559de94ed8b281c629d2.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="../img/index/788b44e3ff1f473cce8232403d7a0295.jpg" alt="Second slide">
+              <img class="d-block w-100" src="./img/index/788b44e3ff1f473cce8232403d7a0295.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="../img/index/85755ac6dd721ac3ec01833d3915d9e3.jpg" alt="Third slide">
+              <img class="d-block w-100" src="./img/index/85755ac6dd721ac3ec01833d3915d9e3.jpg" alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="../img/index/d8edf05884dd6b3cd2d68acecd4bd217.jpg" alt="Fourth slide">
+              <img class="d-block w-100" src="./img/index/d8edf05884dd6b3cd2d68acecd4bd217.jpg" alt="Fourth slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="../img/index/f96aedc1ae01e701de8a9962445d789e.jpg" alt="Fifth slide">
+              <img class="d-block w-100" src="./img/index/f96aedc1ae01e701de8a9962445d789e.jpg" alt="Fifth slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
@@ -150,24 +150,24 @@
       <article class="articleUltimosProductos">
         <div>
           <p>NUESTRAS OFERTAS</p>
-          <a href="../productos/productos.html">Ver más</a>
+          <a href="./productos/productos.html">Ver más</a>
         </div>
-        <a class="aDescripcion" href="../vistaProducto/vistaProducto.html"><img
+        <a class="aDescripcion" href="./vistaProducto/vistaProducto.html"><img
             src="https://static.nb.com.ar/i/nb_MONITOR-PHILIPS-LED-24-241V8L_size_h100_81bb9f4ce1bab0ccb64638ce1974a330.jpg"
             alt="MONITOR PHILIPS LED 24 241V8L"></div>
           <p>MONITOR PHILIPS LED 24 241V8L</p>
         </a>
-        <a class="aDescripcion" href="../vistaProducto/vistaProducto.html"><img
+        <a class="aDescripcion" href="./vistaProducto/vistaProducto.html"><img
             src="https://static.nb.com.ar/i/nb_WATER-COOLER-GIGABYTE-AORUS-WATERFORCE-X280_size_h100_8d0036109f6be4f09f984625c0ce7373.jpeg"
             alt="WATER COOLER GIGABYTE AORUS WATERFORCE X280"></div>
           <p>WATER COOLER GIGABYTE AORUS WATERFORCE X280</p>
         </a>
-        <a class="aDescripcion" href="../vistaProducto/vistaProducto.html"><img
+        <a class="aDescripcion" href="./vistaProducto/vistaProducto.html"><img
             src="https://static.nb.com.ar/i/nb_WATER-COOLER-GIGABYTE-AORUS-WATERFORCE-X360_size_h100_5f956dd31ac501b20c50eb65b60d9ce8.png"
             alt="WATER COOLER GIGABYTE AORUS WATERFORCE X360"></div>
           <p>WATER COOLER GIGABYTE AORUS WATERFORCE X360</p>
         </a>
-        <a class="aDescripcion" href="../vistaProducto/vistaProducto.html"><img
+        <a class="aDescripcion" href="./vistaProducto/vistaProducto.html"><img
             src="https://static.nb.com.ar/i/nb_MOTHER-GIGABYTE-(LGA1700)-B760M-DS3H-DDR4_size_h100_a48695da55997cb85135f221f35809da.jpg"
             alt="MOTHER GIGABYTE (LGA1700) B760M DS3H DDR4"></div>
           <p>MOTHER GIGABYTE (LGA1700) B760M DS3H DDR4</p>
@@ -179,47 +179,47 @@
         <div class="imagen1">
           <p>NUESTROS PRODUCTOS</p>
         </div>
-        <a class="imagen2" href="../productos/productos.html">
+        <a class="imagen2" href="./productos/productos.html">
           <div class="divAuto">
             <p class="pImg">MOTHERBOARDS</p>
           </div>
         </a>
-        <a class="imagen3" href="../productos/productos.html">
+        <a class="imagen3" href="./productos/productos.html">
           <div class="divAuto">
             <p class="pImg">MEMORIAS RAM</p>
           </div>
         </a>
-        <a class="imagen4" href="../productos/productos.html">
+        <a class="imagen4" href="./productos/productos.html">
           <div class="divAuto">
             <p class="pImg">GABINETES</p>
           </div>
         </a>
-        <a class="imagen5" href="../productos/productos.html">
+        <a class="imagen5" href="./productos/productos.html">
           <div class="divAuto">
             <p class="pImg">PLACAS DE VIDEO</p>
           </div>>
         </a>
-        <a class="imagen6" href="../productos/productos.html">
+        <a class="imagen6" href="./productos/productos.html">
           <div class="divAuto">
             <p class="pImg">PERIFERICOS</p>
           </div>
         </a>
-        <a class="imagen7" href="../productos/productos.html">
+        <a class="imagen7" href="./productos/productos.html">
           <div class="divAuto">
             <p class="pImg">MONITORES</p>
           </div>
         </a>
-        <a class="imagen8" href="../productos/productos.html">
+        <a class="imagen8" href="./productos/productos.html">
           <div class="divAuto">
             <p class="pImg">FUENTES</p>
           </div>
         </a>
-        <a class="imagen9" href="../productos/productos.html">
+        <a class="imagen9" href="./productos/productos.html">
           <div class="divAuto">
             <p class="pImg">DISCOS</p>
           </div>
         </a>
-        <a class="imagen10" href="../productos/productos.html">
+        <a class="imagen10" href="./productos/productos.html">
           <div class="divAuto">
             <p class="pImg">MICROPROCESADORES</p>
           </div>
@@ -230,7 +230,7 @@
   <footer>
     <article class="articleFooter">
       <div>
-        <img src="../img/index/logo.png" alt="">
+        <img src="./img/index/logo.png" alt="">
       </div>
       <div>
         <p class="pFooter">Direccion</p>
