--- a/vistaProducto/vistaProducto.html
+++ b/vistaProducto/vistaProducto.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index/index.html"><img src="../img/index/logo.png" alt="" style="width:60px"></a>
+                <a class="navbar-brand" href="../index.html"><img src="../img/index/logo.png" alt="" style="width:60px"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -26,10 +26,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-disabled="true" href="../index/index.html">Home</a>
+                            <a class="nav-link" aria-disabled="true" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../index/index.html#section2">Categorías</a>
+                            <a class="nav-link" aria-current="page" href="../index.html#section2">Categorías</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../productos/productos.html">Productos</a>
